--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.4",
+        "ext-dom": "*",
+        "ext-libxml": "*",
         "ext-pdo": "*",
+        "fivefilters/readability.php": ">=3.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1"
     },
