--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "ext-pdo": "*",
         "fivefilters/readability.php": ">=3.0",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "openai-php/laravel": "^0.17.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
